<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.opening.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_sign_in"
            style="@style/titleAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/txt_sign_in"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_info_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="94dp"
            android:layout_marginTop="@dimen/vertical_space_15"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_info_sign_in"
            android:textAlignment="center"
            android:textColor="#992E2E2E"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

        <ImageView
            android:id="@+id/img_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="@dimen/vertical_space_30"
            android:contentDescription="@string/txt_image_for_sign_in"
            android:scaleType="centerInside"
            android:src="@drawable/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/tv_info_sign_in"
            app:layout_constraintStart_toStartOf="@+id/tv_info_sign_in"
            app:layout_constraintTop_toBottomOf="@id/tv_info_sign_in" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/auth_horizontal"
            android:layout_marginTop="@dimen/vertical_space_20"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_sign_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input_auth"
                android:fontFamily="@font/poppins"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/auth_horizontal"
            android:layout_marginTop="@dimen/vertical_space_20"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input_auth"
                android:fontFamily="@font/poppins"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_20"
            android:fontFamily="@font/poppins"
            android:text="@string/txt_forgot_password"
            app:layout_constraintEnd_toEndOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="@dimen/vertical_space_30"
            android:contentDescription="@string/txt_content_sign_in"
            android:background="@drawable/bg_button_submit"
            android:text="@string/txt_sign_in"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_40"
            android:fontFamily="@font/poppins"
            android:text="@string/txt_info_sign_up"
            android:textAlignment="center"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>