<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.profile.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg_default"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back_profile"
                android:layout_width="30dp"
                android:layout_gravity="center_vertical"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_left_arrow"/>

            <TextView
                android:id="@+id/txt_email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email_profile"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_light"/>

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_bg_default"
        android:paddingHorizontal="@dimen/vertical_space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_profile"
            android:textSize="@dimen/vertical_space_18"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="@dimen/vertical_space_20"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_out"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/vertical_space_30"
            android:background="@drawable/bg_button_submit"
            android:contentDescription="@string/txt_content_logout"
            android:text="@string/txt_logout_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>